# ai-getter

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  data.db  gemini_client.py  main.py  pyproject.toml
src/: exeptions.py  gemini_client.py  main.py
src/database/: crud.py  db.py  models.py
